<resources>
    <string name="app_name">微士</string>
    <string name="def_image_desc">图片默认描述</string>
    <string name="default_unified_loading_text">请稍候&#8230;</string>
    <string name="default_unified_loading_text2">正在创建资料 </string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="sliding_menu_home">主页</string>
    <string name="sliding_menu_my_family">家人</string>
    <string name="sliding_menu_my_sos">求救</string>
    <string name="sliding_menu_family_request">家人请求</string>
    <string name="sliding_menu_notification">通知</string>
    <string name="sliding_menu_tidings">聊天</string>
    <string name="sliding_menu_my_clue">证据</string>
    <string name="sliding_menu_setting">设置</string>
    <string name="network_error">网络错误</string>
    <string name="activity_lost_titlebar">提示</string>
    <string name="activity_lost_msg">没有获取到当前位置</string>
    <string name="activity_lost_tip1">暂时未获取到当前位置，导致无法继续求救，可能原因有：</string>
    <string name="activity_lost_tip11">1.手机处于飞行模式</string>
    <string name="activity_lost_tip12">2.所处环境网络环境差</string>
    <string name="activity_lost_tip2">你可以尝试下面两种方法：</string>
    <string name="activity_lost_tip3">1.重启APP可能会解决此问题</string>
    <string name="activity_lost_tip4">2.反馈所遇到到问题，我们会及时帮你解决</string>
    <string name="activity_lost_relocate">重新定位</string>
    <string name="activity_guide_btn_login">登录</string>
    <string name="activity_guide_btn_register">注册</string>
    <string name="activity_login_ttb_title">登录</string>
    <string name="activity_login_edt_phone">输入手机号</string>
    <string name="activity_login_edt_password">输入密码</string>
    <string name="activity_login_btn_login">登录</string>
    <string name="activity_login_tv_forgot">忘记密码？</string>
    <string name="activity_register_1_ttb_title">输入手机号1/3</string>
    <string name="activity_register_1_edt_phone">输入手机号</string>
    <string name="activity_register_1_edt_password">输入密码</string>
    <string name="activity_register_1_tv_tip_1">1.手机号用来接收验证码，注册后可用手机号登录</string>
    <string name="activity_register_1_tv_tip_2">2.密码最少6位，最多15位，区分大小写</string>
    <string name="activity_register_2_ttb_title">输入验证码2/3</string>
    <string name="activity_register_2_edt_check">输入验证码</string>
    <string name="activity_register_2_tv_tip_1">验证码已经发送到手机</string>
    <string name="activity_register_2_tv_tip_2">若没有收到，</string>
    <string name="activity_register_2_tv_tip_3">S后重发</string>
    <string name="activity_register_2_tv_resend">重发验证码</string>
    <string name="activity_register_3_ttb_title">输入资料3/3</string>
    <string name="activity_register_3_tv_tip_1">设置头像</string>
    <string name="activity_register_3_tv_tip_2">最好以本人照片作为头像，方便家人认出你</string>
    <string name="activity_register_3_edt_nickname">输入昵称</string>
    <string name="activity_register_3_image_tv_title">设置头像</string>
    <string name="activity_register_3_image_btn_snapshot">拍照</string>
    <string name="activity_register_3_image_btn_album">手机相册</string>
    <string name="activity_register_3_image_btn_cancel">取消</string>
    <string name="activity_registered_ttb_title">添加家人</string>
    <string name="activity_registered_tv_tip_1">帐号创建成功</string>
    <string name="activity_registered_tv_tip_2">欢迎使用微士，这是一款保护自己和家人的安全软件，至少添加一位家人方便更好使用，建议您同时添加父母/小孩/爱人。</string>
    <string name="activity_registered_tv_tip_3">欢迎使用微士，这是一款保护自己和家人的安全软件，至少添加一个家人后您才能更好地使用APP，建议您同时添加父母/小孩/爱人。是否从手机通讯录中添加家人？</string>
    <string name="activity_registered_btn_add">添加家人</string>
    <string name="activity_registered_ckb_match">匹配通讯录，以便快速找到家人</string>
    <string name="activity_addfamily_ttb_title">添加家人</string>
    <string name="activity_addfamily_tv_tip_1">从中挑选家人并添加</string>
    <string name="activity_addfamily_edit_tip">快速查找家人</string>
    <string name="activity_addfamily_clear_text">取消</string>
    <string name="activity_addfamily_tv_add">对方已开通微士帐号，添加为家人</string>
    <string name="activity_addfamily_btn_add">添加</string>
    <string name="activity_addfamily_itemtv_added">已发送</string>
    <string name="activity_addfamily_tv_invite">对方尚未开通微士帐号，邀请其开通</string>
    <string name="activity_addfamily_btn_invite">邀请</string>
    <string name="activity_addfamily_tv_invited">已发送</string>
    <string name="activity_addfamily_tv_added">已添加为家人</string>
    <string name="activity_addfamily_dlg_title">请稍等</string>
    <string name="activity_addfamily_dlg_message">正在读取通讯录</string>
    <string name="activity_familyin_ttb_title">详细资料</string>
    <string name="activity_familyin_tv_relation">关系</string>
    <string name="activity_familyin_tv_contact">通讯录联系人：</string>
    <string name="activity_familyin_tv_isnotcontact">非通讯录联系人</string>
    <string name="activity_familyin_btn_add">加为家人</string>
    <string name="activity_familyout_ttb_title">详细资料</string>
    <string name="activity_familyout_tv_tip_1">对方尚未开通微士帐号，赶紧邀请吧</string>
    <string name="activity_familyout_btn_invite">发送邀请</string>
    <string name="activity_fogot_1_ttb_title">重置密码</string>
    <string name="activity_fogot_1_edt_phone">输入注册手机号</string>
    <string name="activity_fogot_2_ttb_title">重置密码</string>
    <string name="activity_fogot_2_edt_check">输入验证码</string>
    <string name="activity_fogot_2_tv_tip_1">验证码已发送到手机</string>
    <string name="activity_fogot_2_tv_tip_2">若没有收到，</string>
    <string name="activity_fogot_2_tv_tip_3">S后重发</string>
    <string name="activity_fogot_2_tv_resend">重发验证码</string>
    <string name="activity_fogot_3_ttb_title">重置密码</string>
    <string name="activity_fogot_3_edt_password">输入新密码</string>
    <string name="activity_fogot_3_tv_tip">密码最少6位，最多15位，区分大小写</string>
    <string name="fragment_main_ttb_title">微士</string>
    <string name="fragment_main_tv_location">我的位置：</string>
    <string name="fragment_main_tv_locating">正在获取位置...</string>
    <string name="fragment_main_tv_location_fail">获取位置失败</string>
    <string name="fragment_main_tv_familylocate">家人定位</string>
    <string name="fragment_main_tv_checkin">平安到达</string>
    <string name="fragment_main_tv_clue">拍照留证</string>
    <string name="fragment_main_first_tv_tip">您正在使用语音求救，长按SOS不放，系统将会录制求救语音发送给你的家人。</string>
    <string name="fragment_main_first_btn_know">知道了</string>
    <string name="fragment_main_recode_tv_tip_1">您已录制</string>
    <string name="fragment_main_recode_tv_tip_11">倒计时</string>
    <string name="fragment_main_recode_tv_tip_2">松开发送给家人，上滑取消求救</string>
    <string name="fragment_main_recode_tv_tip_3">松开取消求救</string>
    <string name="fragment_main_families_tv_select">选择家人</string>
    <string name="fragment_main_families_tv_add">添加家人</string>
    <string name="fragment_main_families_btn_cancel">取消</string>
    <string name="fragment_main_clue_tv_first">当碰到犯罪事件或疑似犯罪事件，如抢劫/偷盗/火灾等，请拍摄照片上传到社会视频专网，以便公安机关迅速侦破案件。</string>
    <string name="fragment_main_clue_btn_know">知道了</string>
    <string name="fragment_main_over_tv_tip">你刚才体验了普通求救功能，按住SOS按钮不放，开启语音求救功能，系统将录制求救语音发送给你的家人。</string>
    <string name="fragment_main_over_btn_know">知道了</string>
    <string name="fragment_main_recode_fail">手机无法录音</string>
    <string name="fragment_main_first_guide">请务必添加几个家人，万一遇到危险，你可以长按SOS，发送求救语音和位置给向他们</string>
    <string name="fragment_main_addfamily_title">点击添加家人</string>
    <string name="fragment_main_addfamily_tip">想查看家人位置，快去添加TA吧</string>
    <string name="activity_mapsos_pop_tip">普通求救</string>
    <string name="activity_mapsos_titlebar_tip">求救</string>
    <string name="activity_mapsos_locating_tv_tip">正在快速定位</string>
    <string name="activity_mapsos_located_tv_tip">正在搜寻附近SOS资源...</string>
    <string name="activity_mapsos_polices_tv_tip_1">附近两公里内有</string>
    <string name="activity_mapsos_polices_tv_tip_2">个派出所，最近的离你</string>
    <string name="activity_mapsos_polices_tv_tip_3">米</string>
    <string name="activity_mapsos_polices_btn_call">拨打电话</string>
    <string name="activity_mapsos_polices_btn_cancel">取消</string>
    <string name="activity_mapsos_call_police_tv_tip_1">附近2公里暂时没有派出所，建议直接拨打110</string>
    <string name="activity_mapsos_call_110_btn">拨打110</string>
    <string name="activity_voicesos_pop_tip">语音求救</string>
    <string name="activity_voicesos_tv_tip">求救语音</string>
    <string name="activity_voicesos_btn_send">确定发送</string>
    <string name="activity_voicesos_btn_cancel">取消发送</string>
    <string name="activity_voicesos_dlg_cancel">家人将无法及时帮助你，确定要取消发送求救语音吗？</string>
    <string name="activity_voicesos_dlg_yes">取消发送</string>
    <string name="activity_voicesos_dlg_no">暂不取消</string>
    <string name="activity_voicesos_dlg_nobody">你没有添加家人导致求救语音发送失败，是否立即添加家人？</string>
    <string name="activity_voicesos_dlg_nobody_yes">添加家人</string>
    <string name="activity_voicesos_dlg_nobody_no">以后再说</string>
    <string name="activity_sendsos_tv_tip">正在发送求救语音和当前位置</string>
    <string name="activity_sendsos_btn_cancel">取消</string>
    <string name="activity_sentsos_tv_tip">发送成功</string>
    <string name="activity_sentsos_tv_all">求救信息已发送给家人，一旦他们查看了求救信息，系统将第一时间通知你！在此期间，你还可以拨打110求救。</string>
    <string name="activity_sentsos_btn_know">知道了</string>
    <string name="activity_sentsos_btn_call_110">拨打110</string>
    <string name="activity_voicesos_none_ttb_title">提示</string>
    <string name="activity_voicesos_none_tv_tip_1">语音求救</string>
    <string name="activity_voicesos_none_tv_tip_2">此功能允许你录制求救语音发送给家人，您还没有添加家人，暂时无法使用此功能。建议你添加父母/子女/爱人。</string>
    <string name="activity_voicesos_none_btn_add">添加家人</string>
    <string name="activity_familylocate_ttb_title">家人定位</string>
    <string name="activity_familylocate_pop_btn_call">拨打电话</string>
    <string name="activity_familylocate_pop_btn_cancel">取消</string>
    <string name="activity_familylocate_loading">正在获取家人位置...</string>
    <string name="activity_familylocate_hided">（已对家人隐藏位置）</string>
    <string name="activity_familylocate_none_ttb_title">提示</string>
    <string name="activity_familylocate_none_tv_tip_1">家人定位</string>
    <string name="activity_familylocate_none_tv_tip_2">家人定位帮助你随时查看家人位置，您还没有添加家人，暂时无法使用此功能。建议你添加父母/子女/爱人。</string>
    <string name="activity_familylocate_none_btn_add">添加家人</string>
    <string name="activity_familylocations_none_ttb_title">提示</string>
    <string name="activity_familylocations_none_tip">无法获取位置</string>
    <string name="activity_familylocations_none_tip2">没有获取到位置</string>
    <string name="activity_familylocations_none_desc_1">暂时未获取到</string>
    <string name="activity_familylocations_none_desc_2">的位置，可能原因有:</string>
    <string name="activity_familylocations_none_list_1">1.对方手机已经关机</string>
    <string name="activity_familylocations_none_list_2">2.对方手机处于飞行模式</string>
    <string name="activity_familylocations_none_list_3">3.对方所处环境网络环境差</string>
    <string name="activity_familylocations_none_list_4">4.对方已经强行退出微士APP</string>
    <string name="activity_familylocations_none_list_5">5.对方隐藏了自己的位置</string>
    <string name="activity_familylocations_none_list_6">如果您有疑问，建议拨打对方手机。</string>
    <string name="activity_checkin_ttb_title">平安到达</string>
    <string name="activity_checkin_tv_locatioin_1">您已到达“</string>
    <string name="activity_checkin_tv_locatioin_2">通知家人让他们放心</string>
    <string name="activity_checkin_btn_all">安全到达，通知家人</string>
    <string name="activity_checkin_notify_family">告诉家人你平安到达了</string>
    <string name="activity_phone_2_edt_check">输入验证码</string>
    <string name="activity_phone_2_tv_tip_1">验证码已经发送到手机</string>
    <string name="activity_phone_2_tv_tip_2">若没有收到，</string>
    <string name="activity_phone_2_tv_resend">S后重发</string>
    <string name="activity_password_edt_old">输入旧密码</string>
    <string name="activity_password_edt_new">输入新密码</string>
    <string name="activity_password_tv_tip">密码最少6位，最多15位，区分大小写</string>
</resources>