<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/comm_activity_background" >

    <include
        android:id="@+id/titlebar_fogot_3"
        layout="@layout/layout_title_bar" />

    <EditText
        android:id="@+id/edt_password_old"
        style="@style/EditStyle"
        android:layout_below="@+id/titlebar_fogot_3"
        android:layout_marginLeft="@dimen/activity_password_edt_password_old_0_layout_marginLeft"
        android:layout_marginRight="@dimen/activity_password_edt_password_old_1_layout_marginRight"
        android:layout_marginTop="@dimen/activity_password_edt_password_old_2_layout_marginTop"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:ems="10"
        android:hint="@string/activity_password_edt_old"
        android:inputType="textVisiblePassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edt_password_new"
        style="@style/EditStyle"
        android:layout_below="@+id/edt_password_old"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_password_edt_password_new_3_layout_marginLeft"
        android:layout_marginRight="@dimen/activity_password_edt_password_new_4_layout_marginRight"
        android:layout_marginTop="@dimen/activity_password_edt_password_new_5_layout_marginTop"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:ems="10"
        android:hint="@string/activity_password_edt_new"
        android:inputType="textVisiblePassword" />

    <TextView
        android:id="@+id/tv_password_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edt_password_new"
        android:layout_alignRight="@+id/edt_password_new"
        android:layout_below="@+id/edt_password_new"
        android:layout_marginTop="@dimen/activity_password_tv_password_tip_6_layout_marginTop"
        android:text="@string/activity_password_tv_tip"
        android:textColor="@color/setting_item_text_color"
        android:textSize="@dimen/font_size_16" />

</RelativeLayout>